Updated Pixel Streaming landing page and matchmaker
Matchmaker now redirects with token and pixel stream page passes token into ue4 app

--- a/Engine/Source/Programs/PixelStreaming/WebServers/SignallingWebServer/config.json
+++ b/Engine/Source/Programs/PixelStreaming/WebServers/SignallingWebServer/config.json
@@ -1,12 +1,13 @@
 {
 	"UseFrontend": false,
-	"UseMatchmaker": true,
+	"UseMatchmaker": false,
 	"UseHTTPS": false,
 	"UseAuthentication": false,
 	"LogToFile": true,
-	"HomepageFile": "/public/player.html",
+	"HomepageFile": "/public/PixelDemo.htm",
 	"AdditionalRoutes": {},
 	"EnableWebserver": true,
+	"enableLifecycleManagement": false,
 	"MatchmakerAddress": "",
 	"MatchmakerPort": "9999",
 	"PublicIp": "localhost",
