--- a/Engine/Source/Programs/PixelStreaming/WebServers/Matchmaker/config.json
+++ b/Engine/Source/Programs/PixelStreaming/WebServers/Matchmaker/config.json
@@ -1,6 +1,6 @@
 {
 	"HttpPort": 80,
-	"UseHTTPS": false,
+	"UseHTTPS": true,
 	"MatchmakerPort": 9999,
 	"LogToFile": true,
 	"enableAutoScale": true,
